[package]
name = "password_aindustriosa"
version = "0.1.0"
authors = ["JatoMixo <jatomixo@outlook.es>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32s2-hal", version = "0.9.0" }
esp-backtrace = { version = "0.7.0", features = ["esp32s2", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.5.0", features = ["esp32s2"] }
